# StudentAgent

./: .gitignore  Dockerfile  README.md  llm_tests.ipynb  openai_example.ipynb  pbd_to_image.py  pyproject.toml  recall_design.ipynb  requirements.txt  test_student.ipynb  trappe_molecule_list.json
CSD-modified/: README.md
data/: agent_input_file.py  input_files.tex  latex_parsing.py  raspa_knowledge.ipynb
memory/: test.txt
output/: trappe_molecule_list.json
output/st/: Methane.def  force_field_mixing_rules.def  pseudo_atoms.def
output/st/1/: propane.def  propane.mol
raspa/: agent_input_file.py  input_file_memory.json  latex_parsing.py  mvp1_memory.txt  mvp2_memory.txt  raspa_input_files.ipynb  raspa_knowledge.ipynb
src/student/: __init__.py  app.py  app_utils.py
student/: agent.py  agent_input_file.py  agent_memory.py  app.py  app_utils.py  bm25_indexing.py  gui.py  io_interface.py  iraspa.py  memory.py  mode_assistant.py  mode_library.py  mode_student.py  render.py  tools.py
student/agent/: agent.py  agent_memory.py  agent_raspa.py  agent_student.py  memory.py  student.py  utils.py
student/data/: examples.tex
student/input_gen/: generate_mol_definition.py  memory_framework.py  memory_molecule.py  pseudoatoms.py  simulation.py  trappe_loader.py  utils_molecules.py
student/student.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
student_draft/: agent_input_file.py  app.py  input_file_memory.json  memory.py  mode_assistant.py  mode_library.py  mode_student.py
student_draft/input_gen/: simulation.py  trappe_loader.py  utils_molecules.py
(+97 files in other folders)
